# fitbod-report

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/modules/: data_processing.md  pdf_generation.md  report_generation.md
docs/usage/: getting_started.md
src/: __init__.py
src/api/: uv_app.py
src/data/: exercise_db.py  processor.py  validator.py
src/pdf/: generator.py
src/report/: generator.py
src/utils/: converters.py
tests/: conftest.py  test_converters.py  test_exercise_db.py  test_processor.py  test_reports.py  test_summarize.py
